# rust-concepts

./: .gitignore  Cargo.toml  README.md  nodemon.json
book/: dictionary.md  foreword.md  introduction.md  the_rust_programming_language.md
src/: main.rs  note.rs
src/advanced_features/: Cargo.toml
src/advanced_features/src/: lib.rs  main.rs  unsafe.rs
src/an_io_project/: Cargo.toml  README.md  results.txt
src/an_io_project/src/: config.rs  lib.rs  main.rs  run.rs  search.rs  test.rs
src/async/: Cargo.toml
src/async/src/: lib.rs  main.rs  my_async.rs
src/closure/: Cargo.toml
src/closure/src/: cacher.rs  fake_js_array.rs  function.rs  lib.rs  main.rs
src/error/: Cargo.toml
src/error/src/: deal_with_error.rs  error_fnc.rs  lib.rs  panic.rs  question_mark_operation.rs  try_catch.rs  unwrap_expect_method.rs
src/functions/: Cargo.toml
src/functions/src/: function.rs
src/generics/: Cargo.toml
src/generics/src/: lib.rs  test_generics.rs  types.rs  vector_prototype.rs
src/lifetimes/: Cargo.toml
src/lifetimes/src/: lib.rs  static.rs  struct_with_lifetimes.rs  three_rules.rs
src/oop/: Cargo.toml
src/oop/src/: class.rs  lib.rs  main.rs  state_pattern.rs
src/ownership/: Cargo.toml
src/ownership/src/: ownership.rs  rules.rs
src/patterns_matching/: Cargo.toml
src/pointer/: Cargo.toml
src/smart_pointers/: Cargo.toml
src/stored_in_heap_data/: Cargo.toml
src/stored_in_stack_data/: Cargo.toml
src/test/: Cargo.toml
src/thread/: Cargo.toml
src/traits/: Cargo.toml
tests/: integration_test.rs
tests/integration_div/: mod.rs
(+66 files in other folders)
