[package]
authors = ["dangduoc"]
edition = "2018"
name = "rust-concepts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error = {path = "./src/error"}
functions = {path = "./src/functions"}
generics = {path = "./src/generics"}
ownership = {path = "./src/ownership"}
pointer = {path = "./src/pointer"}
stored_in_heap_data = {path = "./src/stored_in_heap_data"}
stored_in_stack_data = {path = "./src/stored_in_stack_data"}
traits = {path = "./src/traits"}
