[package]
authors = ["dangduoc"]
edition = "2018"
name = "rust_concepts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
closure = {path = "./src/closure"}
error = {path = "./src/error"}
functions = {path = "./src/functions"}
generics = {path = "./src/generics"}
lifetimes = {path = "./src/lifetimes"}
oop = {path = "./src/oop"}
ownership = {path = "./src/ownership"}
pointer = {path = "./src/pointer"}
smart_pointers = {path = "./src/smart_pointers"}
stored_in_heap_data = {path = "./src/stored_in_heap_data"}
stored_in_stack_data = {path = "./src/stored_in_stack_data"}
testing = {path = "./src/test"}
thread = {path = "./src/thread"}
traits = {path = "./src/traits"}
